--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 <div class="container">
+<div>
+  <h1>Angular form</h1>
+  <div>
+    <app-form></app-form>
+  </div>
+</div>
+
+<hr>
+
   <h1 (Click)="clickH1">DS Giáo Viên {{schoolName}}</h1>
   <div>
     <div>
