--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,5 +90,11 @@
       Ten SV: <app-name [name]="studentName" class="color-red"></app-name>
       MSV: <app-identity [id]="studentId" class="color-blue"></app-identity>
     </div>
-  </div>
+  
 
+<hr>
+
+<div>
+  <app-user></app-user>
+</div>
+</div>
